fix: overflow on home page
- now game page will not have a scroll bar and home page is as intended

--- a/frontend/src/react/styles/Game.module.css
+++ b/frontend/src/react/styles/Game.module.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   overflow: hidden;
   height: 100vh;
-}
+} */
 
 body canvas {
-  height: 100vh;
+  height: 99vh;
 }
 
 #container {
